@@ -9,6 +9,6 @@ LICENSE=GPL-3
 RDEPEND=net-misc/curl dev-libs/jansson adl? ( x11-libs/amd-adl-sdk ) ncurses? ( sys-libs/ncurses ) opencl? ( virtual/opencl ) avalon? ( virtual/libusb:1 ) bflsc? ( virtual/libusb:1 ) bitforce? ( virtual/libusb:1 ) icarus? ( virtual/libusb:1 ) modminer? ( virtual/libusb:1 ) ztex? ( virtual/libusb:1 )
 REQUIRED_USE=|| ( opencl avalon bflsc bitforce icarus modminer ztex ) adl? ( opencl ) scrypt? ( opencl )
 SLOT=0
-SRC_URI=https://github.com/ckolivas/cgminer/archive/v3.4.2.tar.gz
+SRC_URI=http://ck.kolivas.org/apps/cgminer/cgminer-3.4.3.tar.bz2
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	a09e9d3f51cc9119897f6970ba2f9d52	flag-o-matic	2ff578fb151da221e1797f12e2990e72	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c6fc64ecf10be324127bc47cb8838a7d
+_md5_=bbd09e9668fe979d04a0f39a37a176ff
