@@ -1,28 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST cgminer-3.4.2.tar.bz2 6060629 SHA256 10d7631ad41e0d5f95b0f7df45f07ba89743ed3d484552cbcdb61bae2b9c3e6a SHA512 cccdab8de11b9bc740ba387685a24ae07729eedba0dd02d83d708d66b208cff2c719157a90cc157fa4900a386ae76e7692bdc893f3de9928dbcaacc86a4c05f1 WHIRLPOOL 886a1c516647ae7282c49fee45b2ec0a744795092e99ea1dca9836f1a7484b12371f23e39dab220ee69c9b0fc5e7f37afea33eb4d8b394f3fab1659fe8676bce
+DIST cgminer-3.4.3.tar.bz2 6065300 SHA256 d8bd330707b18a0ca9b4aa377edcc23c8492f96fbf08a51c64019de12cbf7b0d SHA512 e7871af17ecd17b1f7ddc21e68ed114ec71223e1c2ec0dc57066e9434c9f6955c34fb8d8986e34dc3fd50c48fccac1d36ab7695f62dea2c987bab44c90feb6ff WHIRLPOOL 97f56035448da30a777e0e829134967480148cc95bed24759ff3c3b977f3af3d5daffdb3382e4f47192c6fd6d001bb8e91ee916beb4444c2547fcaec01251572
 DIST v3.3.3.tar.gz 6251678 SHA256 5ca131517c827486180e7e83aaf2f0ef8bb6df1465d02cb016c6f75da6e68469 SHA512 e718ecca8c452bdac50ee9f6c9e3efd2d46a44a16007005c949644fd4ba90cb758bc09326c779d35daed5d819fe68d668553042af559eae67e44ea3ed12e00c4 WHIRLPOOL 5657e3c31deb2eb6f9f2afb3024080978657a68956128b349e2fbf8f71e46d8d7a20643ab843f0123595060ca26a70c6e1b53b2401eae172ab2c49269c0734ed
 DIST v3.3.4.tar.gz 6251911 SHA256 003ec0e9be2eb41a6d2e8388d7cb3730e7a0af01faec6948ba31903b499db503 SHA512 0ec99c955e938408859971c4852d4210a631acacd7fd6c5149313ffcca59105a9a115ea0409b26567c49a050e42f6df1c0b89e634c59a099da28613a0cd6e77a WHIRLPOOL f0cb7292448ffa7437e593e95deadafccca4ebc4b95e49381557fc50c1c6cbf21ac866f7341f359313ab0faa803fa6d18dc6c3dca49e55b7d283070f658ecb86
+DIST v3.4.2.tar.gz 6466947 SHA256 ccdb1096971589e9a14642c44b9532a34125042ab7e46ec1f8219af52591d92e SHA512 8ec8c328604dbad91dcf348e18606bfa378d3b78210b69def57da43090b46599b788a2ebd763ad990a21787bdf97187066ed8d04532529c177818de966598055 WHIRLPOOL a552161e56cd2ef4a658d81f254138ae1abebec6e69c4e397c522cf22c5cc8f4d7e4df47249551e61c9342ca5ef4e2ad03dfa0845bd676fb6995faa83492a79e
 EBUILD cgminer-3.3.3.ebuild 2392 SHA256 cfa4f57b48e6805b92025cd00c8f7ec44c756ad1f69e969ef5e8b9b041daad97 SHA512 b5d927c3621bea63395e879a7083f1417a3c34f9c238b76bc3ea5418d510a2f9c5ae9f80dc59327f5036af71ce6557acdb0856353af8a4508205ec33fa07a3e6 WHIRLPOOL 0683d9351e34f3d2d2d27c6fe88da4b9c64b99713af73dde228a0553207f4cc907d680c303d77bbb6e128f98a428658c3870fe4eb61a387f52e754cac09e8a3f
 EBUILD cgminer-3.3.4.ebuild 2392 SHA256 97ebe964fe77cc7871bcc55a78066ce20ef2604c9531bdf50bfc5863e7f85eb0 SHA512 42cb5a7f04d0aeff9045e39e6af2ca47cc5738d777c459743ad7585ccebf3a253d903e383c3995fdeb53adbb5cf1d4950a7e4029dcfabe2f5de586df7a39f632 WHIRLPOOL d0e11701742551478e46bdcc89a55906f13fc57383d3a4c98054c747ec56d02bf7b8eb8d5a68c437ffd160690f5cc1a401bd953d829be9232a43345474cc9a39
-EBUILD cgminer-3.4.2.ebuild 2392 SHA256 d7ddf02f4fe9124bf5cbf355c3c3505fb8eca4830a5caaec5c4528ab219fb783 SHA512 21a81a4947dde33e88247f0a83c1c3458ffca05f38bca45c6d4467fb9b078303797d121f294b56bfb6c79c4e93cfc734e25f63acf0a5af22da7f7b60c521738e WHIRLPOOL 4346ccb23f01c3526bb23c269f6587c213d48c9fd81341df09fe648cc86eb5612cdbb65b2ef0c8ab3a6da8f9cc13b9fc6bbc15e4923f8b4b8f9fdad824015344
-MISC ChangeLog 6662 SHA256 88d956aebec653e2f8154b2eec9f507fb52b936b324d41e805b554315060c991 SHA512 8f2ac0f60d5d9bf85e1090ec2eacbdb859dd7889595e34b239f439ab68d497d2574e5e426aab7e6e229f3d8b2fc922b1e425b25dace873bded8f5a003a64281d WHIRLPOOL 791532de5f18fd6f3cf59b55219eb53898e3b7190f5c75f22309ef7a425f186a8e6010dea3c418059ba65c92a30bad9825dc5d9d1e4acf8dc2f8ce043a05ffe7
+EBUILD cgminer-3.4.2.ebuild 2392 SHA256 ec467ecc0783cdd951375e8f09ac680d02e65ffcba678e5f21064f855659a046 SHA512 c07f3b94dee45344a41c72c72a2f1730636a2b50bd56c4838730326ed1b190b6cb5c02ba50b4dc6c5fb8485676b66e5dbc0f3144a4b7036ff7eb758a24e511b0 WHIRLPOOL 51927ed0f9d2a430859542233f68fe5095510bea946e96148e16808d090a583906c550aa0e43e7b74fbb5e9be1011292e894d269dc48886b9f57a3826552a6a1
+EBUILD cgminer-3.4.3.ebuild 2392 SHA256 a88ba1ad92a6ce3ffaf119fb4f3b4a125b58df76dac9f0da3df6a4263c78df7c SHA512 37496737fbe0a780123fe39ee36789522daba6a01a21d0314b19c7a2c5d24404a33a6fe9d07e7758f33f18b13e5f15d6c357864cd4ab3f066dedbc88e4ecdf67 WHIRLPOOL 0d5e1797b3f2d283e50154758308118f16497d413322a5128b9c8cad9277e24932ffe25cb35b97297ac971ba4393ce49ce08090bfca54f5ba63272046825296c
+MISC ChangeLog 6810 SHA256 915d3535bd610ccfa84ac47df8b5dd43de4d3ce95f35877b9330d63b5ff651ff SHA512 763af0804bec07b278afce1ae1ad4166a2acc11c131057926d0fd958e8539d003756029e3011f91c0832c0c240268cfbbe1d02bf74e44b8ce8225ab960427ba6 WHIRLPOOL e7b275f5e057ad5b02c78039157be6067d46cf475d8abb97ade78c563baa82622ce66d5526f2484ab2852657d6bcbdf198d91efdabceae6d0a8566e1b2789a58
 MISC metadata.xml 1108 SHA256 e106228c79174b2a22ac7ce964e7a371db344dbb817db955fb14069146811e05 SHA512 cf6967614f7837f8c8533a018d56e08f1e939075781ad1abbe4df44fb25ad2f7cf2fa47a7bb3bd50b29813ef05da586bc92607aa614bff5d86c130d2e0a7ba75 WHIRLPOOL 2e1322c3c5b207e728b819cbac67c5f658759399f55175fc35f41e081c2c74888baa2a2cc32371b766e826aedebe78a2831d5418491d1de03da036942206b0fa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSJeYIAAoJEJOE+m71LUu6vS8QAKvBwTj4dK6X9d0dw+XPNkLL
-hG5Zbvi302fRVmNeOF/QRi//GNZSrz0LpCep0SWNYe7xA5vYcGqyDIrBwhfFWQf7
-imRsVpUKBrNFcyHeM3bx7xwutNDsBcA2Shg+3Y4YuF55+6Bd8b3ThfQYCXTOIOis
-lBCpGePLiKMhhgxN3UcxTRwhjLV2g2KVrqufF5c4vmcMgHpnNc/4irav1JuDF4Vh
-4FmDQs+4iT66HTw/teXRriTth3Ea2eIixg+VNEdEduYgj1bhFjltE1xAGp9AsCf0
-jf5NbKSfmYl4MsST+qThDMQySX4aS3PlnLMG/F+KTEKxWKyO3RmGN0n+X2A/VbuI
-fJJOyUTyj8J/qMKXtzMy8HquMI5x64wIuo5SV91QD7uboFMFXFMToxZpF9fA+2Ux
-JjKlRFBvkH437QrcEZ4bryKUl46nafxhte2uYosVEPbwpQxP3J9K4SZCUlALYLVb
-SdoBEAJe/sXx3VGtSXOXmRV8ApvOkwr7SEVILY+P3pjUMMuz7sKpn5WiLJ/hjC2z
-2jmVRPkTfdOYkgq1MpbSZfqTykWIgLQ0SlSefe4UZKHLCwNnJ8mMd5zxmwKPaMor
-atWceR/g12v5xrViCOdYTePV5qgkDvVNhtb3OVuIWJGlUgwK8xQWzi0CzCbYPoGe
-pn059DJk8ffdILEDF4e/
-=6jSW
+iQIcBAEBCAAGBQJSNEgsAAoJEJOE+m71LUu6pkQP/1mUKCBzpGptu3SCklsBvKik
+v9gcyiqrqunyd7gLrWWCVlrsjVTUvKBOLRDSzdDpaUb0sG/gZ/vNB1Wf/RH60QT9
+U5Y+ikclNXT/J3mmlMu3EKAlo8rmn4y4nfqFFLhIMUW+BvgtwnTru2Es5+BgcDBK
+aaPC0rtRejWo9V9QCuypuG+eLUOQfQA6+GOH4MOiZRPOBhw7OQ04b2JS+Ux4gjJ+
+x3eUfy5l/vJRO/rTdB2CEwJhzCIOyWlESfX0YVyBMgUppYfQWr7K9+FW8IDBfBUH
+W76Uv/WYEkwIZgMDIlM4XsyPwOU7Dr4R/Uyanh3xnCdohEaYvGqbx4QAUN9GNCHH
+2mMty8FFdN1LmEYbYro/29Je98V/Qniz9P6vaqoSLVKHhBiopPRKECKsSPofznm1
+gPxsbz0Ve/O+MIsoKq2XtpKxchJGvBo0nIwl8fQH0yQOfNaJzrFi4zqoVqZHPuvi
+f3v2cNdBjzW1hBtIKkTEVkydOzPhnOiAiaaKDH2N6aAqsnO8TCRWLZCvYkPhMxKG
+JNaZDHnrkqPeN7Z9Vv3KCUCXocNUCPSKcSnwK3cz1zEsJ+ENAT6FGJI7aGntS2gr
+9ip5r71Da0MmxLb12NXYoDcGNc48xgyiGK7fDGrXCBVrdjCHKoXzCvCXJiMkLPmw
+TwqxZaY12XJo2ny3JU1O
+=hv0h
 -----END PGP SIGNATURE-----
