@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/cgminer
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.40 2013/09/03 13:36:25 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/cgminer/ChangeLog,v 1.41 2013/09/14 11:27:07 blueness Exp $
+
+*cgminer-3.4.3 (14 Sep 2013)
+
+  14 Sep 2013; Anthony G. Basile <blueness@gentoo.org> +cgminer-3.4.3.ebuild,
+  cgminer-3.4.2.ebuild:
+  Version bump
 
 *cgminer-3.4.2 (03 Sep 2013)
 
